@@ -1,3 +1,7 @@
+2016-01-25 Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.1.2
+
+	* Added some css to setup.txt for some more styling options
+
 2016-01-06 Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.1.1
 
 	* Added checkboxes to the plugin flexforms to set the output of
